# store_var

./: .gitignore  LICENSE  README.md  pyproject.toml
src/store_var/: __init__.py  store_var.py
test/: test_store_var.py
