[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "store_var"
version = "v1"
authors = [
  { name="Vlad Zahrevsky", email="zahrevsky@gmail.com" },
]
description = "List wrapper, that pickles it on every update"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/zahrevsky/store_var"